Added menu section with food images

--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
       <div class="service-item">
         <h3>Dine-In</h3>
         <p>Enjoy tasty dishes in our cozy restaurant.</p>
+        
+
       </div>
       <div class="service-item">
         <h3>Food Delivery</h3>
@@ -164,6 +166,8 @@
       </div>
     </div>
   </section>
+  
+
 
   <section id="about">
     <h2>About Us</h2>
@@ -182,6 +186,39 @@
       <button type="submit">Send Message</button>
     </form>
   </section>
+    <section id="menu">
+    <h2>Our Menu</h2>
+
+    <div class="service-list">
+
+      <div class="service-item">
+        <img src="https://th.bing.com/th/id/OIP.9oUpKYI8SEkPr_tBulycAAHaEK?w=269&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3" 
+             alt="Canjeero & Suqaar" style="width:100%; border-radius:8px;">
+        <h3>Canjeelo & Suqaar</h3>
+        <p>Delicious traditional Somali breakfast.</p>
+        <strong>Price: $2.5</strong>
+      </div>
+
+      <div class="service-item">
+        <img src="https://th.bing.com/th/id/OIP.jj1vqd8sox9K_61i6xnXTQHaEK?w=279&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3"
+             alt="Bariis Biryani" style="width:100%; border-radius:8px;">
+        <h3>Bariis Biryani</h3>
+        <p>Spicy, flavorful, and freshly prepared.</p>
+        <strong>Price: $3</strong>
+      </div>
+
+      <div class="service-item">
+        <img src="https://th.bing.com/th/id/OIP.I9QjVk48rtDX6hfoS5KFpQHaHa?w=203&h=203&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3"
+             alt="Mango Milkshake" style="width:100%; border-radius:8px;">
+        <h3>Mango & Xalib</h3>
+        <p>Refreshing natural mango milk drink.</p>
+        <strong>Price: $2</strong>
+      </div>
+
+    </div>
+  </section>
+
+
 
   <footer>
     <p>&copy; 2025 Qardho Flavor Restaurant | All Rights Reserved</p>
